# gorkestra

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  HALL_OF_FAME.md  LICENSE  README.md  basic.py  cli.py  core.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
components/: GorkestraDemo.jsx  GorkestraLogo.jsx
examples/: basic_usage.py  custom_persona.py  research_agent.py  x_thread.py
gorkestra/: __init__.py  cli.py  config.py  core.py
gorkestra/agents/: __init__.py  base.py  prebuilt.py
gorkestra/backends/: __init__.py  anthropic.py  base.py  grok.py  ollama.py  openai.py
gorkestra/core/: __init__.py  chain.py  conductor.py  router.py
gorkestra/memory/: __init__.py  base.py  local.py  vector.py
gorkestra/personas/: __init__.py  base.py  builtin.py  library.py
gorkestra/tools/: __init__.py  base.py  code.py  search.py  x.py
tests/: __init__.py  test_personas.py
