[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gorkestra"
version = "0.1.0"
description = "Orchestrate Grok with personality. A Python SDK for xAI's Grok."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Unizuka22"}
]
keywords = ["grok", "xai", "ai", "llm", "orchestration", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff", "mypy"]

[project.scripts]
gorkestra = "gorkestra.cli:main"

[project.urls]
Homepage = "https://github.com/Unizuka22/gorkestra"
Repository = "https://github.com/Unizuka22/gorkestra"

[tool.setuptools.packages.find]
include = ["gorkestra*"]
